# llm-with-context

./: CHANGELOG.md  default.nix  llm-with-context.cabal  shell.nix
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: LLM.hs  ScrubPrefix.hs  Types.hs
src/LLM/: LLM.hs  ScrubPrefix.hs  Types.hs
