cabal-version:      3.0
name:               llm-with-context
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             lazyLambda
maintainer:         galen.sprout@gmail.com
-- copyright:
category:           AI
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  LLM
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , bytestring
                    , containers
                    , data-default
                    , directory
                    , http-client
                    , http-types
                    , http-client-tls
                    , parsec
                    , scrappy-core
                    , text
                    , transformers

                    


                    
                    
    hs-source-dirs:   src
    default-language: Haskell2010
